--- a/React/package.json
+++ b/React/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
     "colors.css": "^3.0.0",
+    "cypress": "^4.12.1",
     "google-maps-react": "^2.0.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
